tests/baselines/reference/implementingAnInterfaceExtendingClassWithProtecteds.errors.txt
tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts(9,7): error TS2420: Class 'Bar' incorrectly implements interface 'I'.
  Type 'Bar' is missing the following properties from type 'I': y, x
tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts(12,7): error TS2420: Class 'Bar2' incorrectly implements interface 'I'.
  Property 'x' is missing in type 'Bar2' but required in type 'I'.
tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts(16,7): error TS2420: Class 'Bar3' incorrectly implements interface 'I'.
  Property 'x' is protected but type 'Bar3' is not a class derived from 'Foo'.
tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts(21,7): error TS2420: Class 'Bar4' incorrectly implements interface 'I'.
  Property 'x' is protected but type 'Bar4' is not a class derived from 'Foo'.
tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts(26,7): error TS2420: Class 'Bar5' incorrectly implements interface 'I'.
  Property 'y' is missing in type 'Bar5' but required in type 'I'.
tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts(29,7): error TS2420: Class 'Bar6' incorrectly implements interface 'I'.
  Property 'y' is protected in type 'Bar6' but public in type 'I'.


==== tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts (6 errors) ====
    class Foo {
        protected x: string;
    }
    
    interface I extends Foo {
        y: number;
    }
    
    class Bar implements I { // error
          ~~~
!!! error TS2420: Class '{|Bar|0|}' incorrectly implements interface '{|I|1|}'.
!!! error TS2420:   Type 'Bar' is missing the following properties from type 'I': y, x
!!! annotated symbol 0 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:9:7
!!! annotated symbol 1 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:5:11
    }
    
    class Bar2 implements I { // error
          ~~~~
!!! error TS2420: Class '{|Bar2|0|}' incorrectly implements interface '{|I|1|}'.
!!! error TS2420:   Property 'x' is missing in type 'Bar2' but required in type 'I'.
!!! related TS2728 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:2:15: 'x' is declared here.
!!! annotated symbol 0 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:12:7
!!! annotated symbol 1 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:5:11
        y: number;
    }
    
    class Bar3 implements I { // error
          ~~~~
!!! error TS2420: Class '{|Bar3|0|}' incorrectly implements interface '{|I|1|}'.
!!! error TS2420:   Property 'x' is protected but type 'Bar3' is not a class derived from 'Foo'.
!!! annotated symbol 0 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:16:7
!!! annotated symbol 1 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:5:11
        x: string;
        y: number;
    }
    
    class Bar4 implements I { // error
          ~~~~
!!! error TS2420: Class '{|Bar4|0|}' incorrectly implements interface '{|I|1|}'.
!!! error TS2420:   Property 'x' is protected but type 'Bar4' is not a class derived from 'Foo'.
!!! annotated symbol 0 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:21:7
!!! annotated symbol 1 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:5:11
        protected x: string;
        y: number;
    }
    
    class Bar5 extends Foo implements I { // error
          ~~~~
!!! error TS2420: Class '{|Bar5|0|}' incorrectly implements interface '{|I|1|}'.
!!! error TS2420:   Property 'y' is missing in type 'Bar5' but required in type 'I'.
!!! related TS2728 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:6:5: 'y' is declared here.
!!! annotated symbol 0 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:26:7
!!! annotated symbol 1 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:5:11
    }
    
    class Bar6 extends Foo implements I { // error
          ~~~~
!!! error TS2420: Class '{|Bar6|0|}' incorrectly implements interface '{|I|1|}'.
!!! error TS2420:   Property 'y' is protected in type 'Bar6' but public in type 'I'.
!!! annotated symbol 0 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:29:7
!!! annotated symbol 1 tests/cases/conformance/interfaces/interfacesExtendingClasses/implementingAnInterfaceExtendingClassWithProtecteds.ts:5:11
        protected y: number;
    }
    
    class Bar7 extends Foo implements I {
        y: number;
    }
    
    class Bar8 extends Foo implements I {
        x: string;
        y: number;
    }
    